    differences between Z and N, and handles the plusgroup, assumed to be the last age.
  - catch.n method for FLBiol now available. Calculates catch from abundance and harvest.
  - a dimnames<- method for FLStock has been added. dimnames can be modified for all
    FLQuant slots and the behaviour of non-quant ones is respected.

USER-VISIBLE CHANGES
  - nls(FLModel) does not strictly require accessor for the input FLQuant slots to be
    defined, but it is still recommended to do so.
  - replacement method for FLPar '[<-', can now use a logical array for indexing.
  - propagate(FLPar) is now able to deal with all dimnames combinations.
  - default values for lower limit of parameters in 'ricker' model lowered to 1e-10.
  - propagate(FLPar) is now defined. The fill.iter argument deafults to FALSE, in
    contrast with FLQuant. Objects do not need to have iter=1 to be extended, but only
    if fill.iter=FALSE.
  - improved selection and replacement for FLPar.
  - rnorm for mean=missing and sd=missing are now defined, Default values are 0 and 1
    respectively.
  - first dimension ('quant') in FLQuant cannot be named 'cohort'.
  - added FLCohort(array) constructor.
  - added FLCohort(missing) constructor.
  - autoParscale method for FLModel returns values for using in the parscale option
    of optim. Parameter estimation is then carried out on params/parscale which
    improves convergence.
  - parscale method for FLModel.
  - window method now accepts numeric values for the extend argument in window. Objects
    are extended along the year dimension for as many years as indicated.
  - setPlusGroup(FLQuant) now has an argument by, with values 'mean' or 'sum' to control 
    how ages are aggregated.
  - rec now uses the "min" age from the range of the FLStock or FLBiol objects 
  - abPars argument "spr0" is now the second in the list to be consistent with svPars
BUG FIXES
  - FS#2 - FLCohort breaks for a single age quant.