@@ -360,6 +360,7 @@ exportMethods(
   "sweep",
 	"transform",
   "trim",
+	"tsb",
 	"type",
 	"type<-",
 	"units",
